--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
+@import url('../fonts/font.css');
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 a {
   color: inherit;
@@ -8,4 +11,50 @@ a {
 }
 img {
   max-width: 100%;
+}
+
+html {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  line-height: 1.5; /* 24px*/
+  color: #333333;
+}
+
+.container {
+  width: 100%;
+  max-width: calc(1110px + 2rem);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hidden {
+  display: none;
+}
+
+/*--------SECTION1--------------------------------------------------------------------------------------------------*/
+
+.card {
+  max-width: 300px;
+  display: inline-block;
+  margin: 1rem;
+  text-align: center;
+  /* display: none; */
+}
+.card.last-card {
+  margin-left: 15px;
+}
+
+.section1 {
+  background: lightgray;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.square {
+  ////
 }
