--- a/fonts/font.css
+++ b/fonts/font.css
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: 'Roboto';
-  src: url('./Roboto-Regular.woff2') format('woff2'),
-    url('./Roboto-Regular.woff') format('woff');
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('./Roboto-Bold.woff2') format('woff2'),
-    url('./Roboto-Bold.woff') format('woff');
-  font-weight: 700;
-}
+@import url(./Lato/font.css);
+@import url(./Courgette/font.css);
+@import url(./Limelight/font.css);
