--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,102 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import url(library.css);
+
+.header .upper-line {
+  padding-top: 17px;
+  padding-bottom: 16px;
+}
+.header .upper-line .navigation {
+  line-height: 16px;
+  gap: 30px;
+}
+.header .center {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #efefef;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.header .logo {
+  gap: 20px;
+  color: var(--primary-color);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 42px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+.header .center .callback {
+  gap: 40px;
 }
 
-img {
-  max-width: 100%;
+.header .bottom-line {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.header .bottom-line .navigation {
+  line-height: 19px;
+  gap: 40px;
+  color: var(--color-black);
 }
 
-html {
-  font-size: 20px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  line-height: 1.5; /* 24px*/
-  color: #333333;
+/* ------------------------------------------------------------------------------------------------------------ */
+
+.first-section {
+  background: var(--primary-color) url('../images/main-bg.jpg') no-repeat
+    center/cover;
+  padding-top: 190px;
+  padding-bottom: 190px;
+}
+.first-section .text-wrap {
+  max-width: 310px;
+}
+.first-section .main-title {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  margin-bottom: 50px;
+}
+.first-section .description {
+  margin-bottom: 50px;
 }
 
-.container {
-  width: 100%;
-  max-width: calc(1110px + 2rem);
-  padding-left: 1rem;
-  padding-right: 1rem;
-  margin-left: auto;
-  margin-right: auto;
+/* ------------------------------------------------------------------------------------------------------------ */
+
+.main-content {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.section-title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  margin-bottom: 38px;
+  color: var(--color-black);
+}
+.main-content .card-wrap {
+  gap: 30px;
+}
+.main-content .card {
+  max-width: 255px;
+  background-color: var(--color-white);
+  padding: 25px 30px;
+  text-align: center;
 }
 
-.hidden {
-  display: none;
+.card .image {
+  display: block;
+  aspect-ratio: 1.17/1;
+  object-fit: contain;
+  margin-bottom: 20px;
+}
+
+.card .description {
+  margin-bottom: 20px;
+}
+
+.card .price {
+  font-size: 21px;
+  font-weight: 500;
+  line-height: 25px;
+  letter-spacing: 0.05em;
+  margin-bottom: 20px;
+  color: var(--color-black);
 }
