--- a/fonts/font.css
+++ b/fonts/font.css
@@ -7,6 +7,13 @@
 
 @font-face {
   font-family: 'Roboto';
+  src: url('./Roboto-Medium.woff2') format('woff2'),
+    url('./Roboto-Medium.woff') format('woff');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Roboto';
   src: url('./Roboto-Bold.woff2') format('woff2'),
     url('./Roboto-Bold.woff') format('woff');
   font-weight: 700;
