--- a/css/library.css
+++ b/css/library.css
@@ -4,6 +4,7 @@
   --color-white: #ffffff;
   --color-black: #000000;
   --font-color: #333333;
+  --font-light: #828282;
 }
 
 * {
@@ -25,6 +26,13 @@ input,
 select,
 textarea {
   font: inherit;
+}
+
+hr {
+  width: 100%;
+  height: 1px;
+  background-color: var(--secondary-color);
+  border: none;
 }
 
 html {
@@ -54,7 +62,7 @@ html {
   min-width: 170px;
   border-radius: 40px;
   border: 2px solid;
-  transition: all 0.3s linear;
+  transition: all 0.2s linear;
   cursor: pointer;
   color: inherit;
 }
@@ -67,6 +75,12 @@ html {
   color: var(--color-white);
 }
 .btn-white {
+  border-color: var(--color-white);
+  color: var(--color-white);
+}
+.btn-white:hover {
+  background-color: var(--color-white);
+  color: var(--primary-color);
 }
 .btn-red {
   border-color: var(--primary-color);
@@ -78,6 +92,8 @@ html {
   color: var(--primary-color);
 }
 .btn-small {
+  min-width: 170px;
+  padding: 10px 20px;
 }
 
 .bg-primary {
@@ -86,6 +102,9 @@ html {
 }
 .bg-secondary {
   background-color: var(--secondary-color);
+}
+.bg-white {
+  background-color: var(--color-white);
 }
 .flex {
   display: flex;
@@ -107,6 +126,15 @@ html {
 }
 .justify-between {
   justify-content: space-between;
+}
+.gap-20 {
+  gap: 20px;
+}
+.gap-30 {
+  gap: 30px;
+}
+.gap-40 {
+  gap: 40px;
 }
 .color-black {
   color: var(--color-black);
